2007-03-29  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs: Implement SystrayBalloon for X11 systems. 

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs: Remove unneeded parameter owner in SetTopmost. 

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs, X11Hwnd.cs: Set _NET_WM_STATE_ABOVE on SetTopmost, it 
	fixes Topmost behavior in X11 environments. 

2007-03-19  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs, X11Hwnd.cs: SetOwner implemented using same code from
	SetTopmost but cheking for null owner to remove transient. The SetTopmost
	will be change on a decond step.

2007-03-15  Andreia Gaita  <avidigal@novell.com>

	* X11Display.cs: Fire extra MouseMove events right after
	MouseDown and MouseUp, emulating win32's <censored> behaviour
	for apps that rely on it.
	
2007-03-15  Chris Toshok  <toshok@ximian.com>

	* XplatUIX11-new.cs: implement VirtualScreen by getting
	X11Display.VirtualScreen instead of using WorkingArea.

	* X11Display.cs: implement VirtualScreen.

2007-03-15  Ivan N. Zlatev <contact@i-nz.net>

	* X11Display.cs: Replaces all uses of the custom 
	WM_MOUSE_LEAVE with the system WM_MOUSELEAVE message.

2007-03-02  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* X11Hwnd.cs: Update to use ToolWindowManager.

2007-02-08  Chris Toshok  <toshok@ximian.com>

	* X11Display.cs: port over some more changes from XplatUIX11.cs.

2007-01-31  Jackson Harper  <jackson@ximian.com>

	* X11Display.cs: Give teh keyboard to teh dnd.

2007-01-30  Chris Toshok  <toshok@ximian.com>

	* X11Display.cs: port over jackson's XplatUIX11.cs fix for DND
	ButtonRelease handling.

2007-01-30  Chris Toshok  <toshok@ximian.com>

	* X11Hwnd.cs: port over the XplatUIX11.cs patch for SetIcon.

2007-01-11  Chris Toshok  <toshok@ximian.com>

	* X11Display.cs: don't send duplicate WM_ACTIVATE messages to the
	initial form.

2007-01-06  Everaldo Canuto  <everaldo@simios.org>

	* X11Hwnd.cs, XplatUIX11-new.cs: 