@@ -1,5 +1,9 @@
 2007-03-29  Everaldo Canuto  <everaldo@simios.org>
 
+	* XplatUIX11-new.cs: Prevent system to open more than one balloon.
+
+2007-03-29  Everaldo Canuto  <everaldo@simios.org>
+
 	* XplatUIX11-new.cs: Implement SystrayBalloon for X11 systems. 
 
 2007-03-20  Everaldo Canuto  <everaldo@simios.org>
